<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.mstart.task.model.RemoteConvert" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.first.FirstScreenFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/btn_gregorian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_gregorian"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:padding="@dimen/_10sdp"
                android:textColor="@android:color/black"
                android:text="@{model.data.gregorian.date}"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_hijri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/there_is_no_hijri_yet"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:padding="@dimen/_10sdp"
                android:text="@{model.data.hijri.date}"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_convert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_gregorian"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/convert"
                android:backgroundTint="@android:color/white"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeColor="@android:color/black"
                app:strokeWidth="@dimen/_2sdp"
                android:textSize="@dimen/_10sdp"
                android:textColor="@android:color/black"
                android:layout_marginTop="@dimen/_15sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/btn_convert"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/add_event"
                android:backgroundTint="@android:color/white"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeColor="@android:color/black"
                app:strokeWidth="@dimen/_2sdp"
                android:textSize="@dimen/_10sdp"
                android:textColor="@android:color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_go_to_events"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:text="@string/go_to_events"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_save"
                app:strokeColor="@android:color/black"
                app:strokeWidth="@dimen/_2sdp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>