<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_time_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_the_event"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@id/tv_time_static"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="@dimen/_10sdp"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_static_gregorian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/gregorian"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_time" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_gregorian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@id/tv_static_gregorian"
            app:layout_constraintTop_toBottomOf="@id/tv_time"
            tools:text="12/1/2007" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_static_hijri"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/hijri"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@id/tv_gregorian"
            app:layout_constraintTop_toBottomOf="@id/tv_time"

            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_hijri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@id/tv_static_hijri"
            app:layout_constraintTop_toBottomOf="@id/tv_time"
            tools:text="12/1/2007"

            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_name_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/name_event"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@id/tv_static_gregorian"
            app:layout_constraintTop_toBottomOf="@id/tv_static_gregorian" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_name_event_dialog"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:background="@android:color/transparent"
            android:hint="@string/write"
            app:layout_constraintBottom_toBottomOf="@id/tv_name_event"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_name_event"
            app:layout_constraintTop_toTopOf="@id/tv_name_event" />
        <ImageView
            android:id="@+id/iv_ic_edit"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/ic_baseline_edit_24"
            android:layout_marginHorizontal="@dimen/_10sdp"
            />
        <ImageView
            android:id="@+id/iv_ic_delete"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/ic_baseline_delete_24"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_description_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/name_description"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@id/tv_static_gregorian"
            app:layout_constraintTop_toBottomOf="@id/tv_name_event" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_description_dialog"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:background="@android:color/transparent"
            android:hint="@string/write"
            app:layout_constraintBottom_toBottomOf="@id/tv_description_event"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_description_event"
            app:layout_constraintTop_toTopOf="@id/tv_description_event" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>